--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Welcome to TierraLibre
+subtitle: This is our blog where we share what is going on :)
 ---
 
 <div class="posts-list">
